--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,11 +1,4 @@
-FROM alpine:latest
-
-RUN apk --no-cache add ca-certificates
-
-WORKDIR /root/
-
-COPY main-linux ./main
-
-EXPOSE 8080
-
-CMD ["./main"]
+FROM golang:alpine
+COPY . .
+RUN go build -o app .
+CMD ["./app"]
