--- a/CreateServiceRequest.yaml
+++ b/CreateServiceRequest.yaml
@@ -12,3 +12,7 @@ networkConfiguration:
 deploymentConfiguration:
   maximumPercent: 200
   minimumHealthyPercent: 100
+loadBalancers:
+  - targetGroupArn: arn:aws:elasticloadbalancing:ap-southeast-2:759984737373:targetgroup/kilinov-targetgroup-bluegreen/57d59101b6b66fa5
+    containerName: ginecs
+    containerPort: 8080
